# lambda-s3-restructure

./: Cargo.toml  README.adoc
.github/workflows/: release.yml
src/: main.rs
