[package]
name = "lambda-s3-restructure"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/buoyant-data/lambda-s3-restructure"
authors = [
    "R Tyler Croy <rtyler@buoyantdata.com>",
]

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["s3"] }
chrono = "0.4.26"
liquid = "0.26"

lambda_runtime = "0.8.1"
routefinder = "0.5.3"
serde_json = "1.0.105"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
urlencoding = "2.1.3"

